UHF-218 Adjusting buttons on paragraph edit forms

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -21,3 +21,10 @@
     --colorGinPrimary: #000000;
   }
 }
+
+// Paragraphs edit from style adjustments
+.paragraphs-add-wrapper {
+  .dropbutton-wrapper.dropbutton-multiple {
+    margin-right: .75rem;
+  }
+}
