--- a/templates/form/input--submit--paragraph-action.html.twig
+++ b/templates/form/input--submit--paragraph-action.html.twig
@@ -10,4 +10,4 @@
  * @see template_preprocess_input()
  */
 #}
-<input{{ attributes.addClass('button--small').setAttribute('data-hdbt-selector', hdbt_selector) }} />{{ children }}
+<input{{ attributes.setAttribute('data-hdbt-selector', hdbt_selector) }} />{{ children }}
