UHF-218 Fix multiple issues on admin theme, add helsinki grotesk font and some hds-tokens

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,4 +3,7 @@
 // This file includes all imports
 //
 
+@import "library/variables/*.*";
+@import "library/mixins/*.*";
+@import "library/fonts/*.*";
 @import "_common";
