UHF-218 Fix for logo position on node edit form

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -39,6 +39,16 @@ body {
       }
     }
   }
+
+  .region.region-sticky {
+    .region-sticky__items {
+      max-width: 1280px;
+      
+      @media (min-width: 1767px) {
+        margin: 0 auto;
+      }
+    }
+  }
 }
 
 .site-name {
