--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -11,15 +11,15 @@ body {
 }
 
 .site-logo {
-  margin-top: 1rem;
-  margin-right: 1rem;
-  width: 5rem;
   line-height: 0;
   margin-bottom: 1rem;
+  margin-right: 1rem;
+  margin-top: 1rem;
+  width: 5rem;
 
   @media (min-width: 1024px) {
-    margin-top: 0;
     margin-bottom: 0;
+    margin-top: 0;
   }
 
   // Fix cut logo.
@@ -30,8 +30,8 @@ body {
 
 .gin--edit-form {
   .block-system-branding-block {
-    max-width: 1280px;
     margin: 0 auto;
+    max-width: 1280px;
 
     .site-logo {
       @media (min-width: 1024px) {
@@ -43,7 +43,7 @@ body {
   .region.region-sticky {
     .region-sticky__items {
       max-width: 1280px;
-      
+
       @media (min-width: 1767px) {
         margin: 0 auto;
       }
@@ -52,8 +52,8 @@ body {
 }
 
 .site-name {
-  padding: 0;
   margin-bottom: 1.2rem;
+  padding: 0;
 
   a {
     --colorGinPrimary: #000000;
@@ -87,8 +87,8 @@ body {
 
 .layout-container {
   &::after {
-    display: none;
     content: none;
+    display: none;
   }
 }
 
@@ -157,14 +157,32 @@ body {
 
 // remove white background and paddings from first level of paragraph elements.
 .paragraphs-tabs-wrapper > .form-item > .layer-wrapper {
-  padding: 0;
-  border: 0 none;
   background-color: transparent;
+  border: 0 none;
   box-shadow: 0 0 0 transparent;
+  padding: 0;
+}
+
+// Paragraphs inside paragraph
+.paragraphs-tabs-wrapper .layer-wrapper .layer-wrapper {
+  background: none;
+  border: 0 none;
+  border-radius: 0;
+  box-shadow: none;
+  padding: 0;
+
+  table thead tr {
+    border-bottom: none;
+  }
 }
 
 .form-item__label {
   font-size: 16px;
+}
+
+.fieldset:not(.fieldgroup) {
+  background-color: $color-white;
+  box-shadow: 4px 4px 10px var(--colorGinLayer2Background);
 }
 
 // Hide "Show row weights" option when editing paragraphs.
@@ -186,8 +204,8 @@ body {
 
       th {
         background: transparent;
-        padding-left: 0;
         padding-bottom: 0;
+        padding-left: 0;
       }
     }
 
