--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -213,7 +213,7 @@ body {
   .select2-selection {
     border: 1px solid var(--colorGinFormElementBorder);
     border-radius: 6px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .25);
+    box-shadow: 0 1px 2px rgba($hdbt-color-black, .25);
     color: var(--colorGinText);
 
     &:hover {
