Reordered styles for admin theme.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,5 +6,10 @@
 @import "library/variables/*.*";
 @import "library/mixins/*.*";
 @import "library/fonts/*.*";
-@import "_common";
 @import "_site-settings";
+@import "_common";
+
+@import "menu/**/*.*";
+@import "node/**/*.*";
+@import "taxonomy/**/*.*";
+@import "paragraphs/**/*.*";
