--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -1,3 +1,9 @@
+//
+// @file
+// Styles for HDBT Admin theme.
+// TODO: Move styles away from this common file.
+//
+
 // Font to Helsinki Grotesk
 body {
   font-family: $base-font-family;
@@ -25,29 +31,6 @@ body {
   // Fix cut logo.
   img {
     padding-top: 1px;
-  }
-}
-
-.gin--edit-form {
-  .block-system-branding-block {
-    margin: 0 auto;
-    max-width: 1280px;
-
-    .site-logo {
-      @media (min-width: 1024px) {
-        margin-bottom: 1rem;
-      }
-    }
-  }
-
-  .region.region-sticky {
-    .region-sticky__items {
-      max-width: 1280px;
-
-      @media (min-width: 1767px) {
-        margin: 0 auto;
-      }
-    }
   }
 }
 
@@ -92,88 +75,9 @@ body {
   }
 }
 
-// Horizontal tab overrides.
-.is-horizontal .tabs--primary {
-  margin-bottom: -12px !important;
-
-  @media (min-width: $breakpoint-m) {
-    padding-left: calc(.5rem - 4px) !important;
-  }
-
-  .tabs__link {
-    border-radius: 0 !important;
-
-    @media (min-width: $breakpoint-m) {
-      padding: $spacing-quarter !important;
-    }
-  }
-
-  .tabs__tab {
-    @media (min-width: $breakpoint-m) {
-      margin-left: $spacing-double;
-    }
-
-    &:first-child {
-      @media (min-width: $breakpoint-m) {
-        margin-left: 0;
-      }
-    }
-  }
-}
-
 // Fix title cutting when using italic.
 .page-title em {
   padding-right: 5px;
-}
-
-// Remove obsolete padding around the node form on large desktop modes.
-.gin--edit-form .page-wrapper__node-edit-form .node-form {
-  @media (min-width: 1440px) {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-  }
-}
-
-// Paragraphs edit from style adjustments.
-.paragraphs-add-wrapper {
-  .dropbutton-wrapper.dropbutton-multiple .button {
-    min-height: 3rem;
-  }
-}
-
-.paragraphs-tabs-wrapper .paragraph-type-label {
-  font-size: 18px !important;
-}
-
-// Hide Paragraph badge.
-.paragraphs-badge {
-  display: none;
-}
-
-// Override margin nullification from the admin theme.
-.js .field--widget-paragraphs .paragraphs-dropbutton-wrapper .dropbutton-multiple {
-  margin-right: .75rem;
-}
-
-// remove white background and paddings from first level of paragraph elements.
-.paragraphs-tabs-wrapper > .form-item > .layer-wrapper {
-  background-color: transparent;
-  border: 0 none;
-  box-shadow: 0 0 0 transparent;
-  padding: 0;
-}
-
-// Paragraphs inside paragraph
-.paragraphs-tabs-wrapper .layer-wrapper .layer-wrapper {
-  background: none;
-  border: 0 none;
-  border-radius: 0;
-  box-shadow: none;
-  padding: 0;
-
-  table thead tr {
-    border-bottom: none;
-  }
 }
 
 .form-item__label {
@@ -188,108 +92,4 @@ body {
 // Hide "Show row weights" option when editing paragraphs.
 .field--widget-paragraphs .tabledrag-toggle-weight-wrapper {
   display: none;
-}
-
-// Hide "About text formats" link from text-area fields on node form.
-.node-form .field--widget-text-textarea {
-  .form-type--textarea + .filter-wrapper {
-    display: none;
-  }
-}
-
-.paragraphs-tabs-wrapper {
-  table.field-multiple-table {
-    thead {
-      box-shadow: 0 0 0 transparent;
-
-      th {
-        background: transparent;
-        padding-bottom: 0;
-        padding-left: 0;
-      }
-    }
-
-    .draggable {
-      background-color: #fff;
-      margin-top: 0.5rem;
-
-      // Hide the paragraph bullet when you are not able to organize paragraphs.
-      td.paragraph-bullet::after {
-        display: none;
-      }
-    }
-  }
-}
-
-// Hero-block style overrides
-.node-form .field--name-field-hero thead .field-label {
-  display: none;
-}
-
-// Select2 to look and feel more Gin-like.
-.select2-container {
-  .select2-selection {
-    border: 1px solid var(--colorGinFormElementBorder);
-    border-radius: 6px;
-    box-shadow: 0 1px 2px rgba($hdbt-color-black, .25);
-    color: var(--colorGinText);
-
-    &:hover {
-      border-color: var(--colorGinText);
-      box-shadow: inset 0 0 0 1px var(--colorGinText);
-    }
-
-    .select2-selection__rendered {
-      align-items: center;
-      display: flex;
-      flex-flow: row wrap;
-      padding: 0.25rem;
-    }
-
-    .select2-search__field {
-      @include font-size(16px, 24px);
-      color: var(--colorGinText);
-      margin: 0;
-      min-width: 100px;
-      padding: calc(0.75rem - 1px) calc(1rem - 1px);
-    }
-
-    // Like button--small.
-    .select2-selection__choice {
-      align-items: center;
-      background: var(--colorGinPrimary);
-      display: flex;
-      margin: .25rem;
-      padding: .5rem 1rem;
-
-      &:hover {
-        background-color: var(--colorGinPrimaryHover);
-      }
-
-      &:active, &:focus {
-        background-color: var(--colorGinPrimaryActive);
-      }
-
-      &, &:hover, &:active, &:focus {
-        color: var(--colorGinButtonText);
-      }
-    }
-
-    .select2-selection__choice__remove {
-      @include font-size(16px);
-      color: var(--colorGinButtonText);
-      margin-right: .5rem;
-      transition: color 200ms;
-
-      &:hover, &:active, &:focus {
-        color: var(--color-metro);
-      }
-    }
-  }
-
-  .select2-results__option {
-    @include font-size(16px, 24px);
-    color: var(--colorGinText);
-    padding: calc(0.75rem - 1px) calc(1rem - 1px);
-  }
 }
