--- a/src/scss/_site-settings.scss
+++ b/src/scss/_site-settings.scss
@@ -1,3 +1,8 @@
+//
+// @file
+// Styles for Site settings page. See: /admin/tools/site-settings.
+//
+
 :root {
   // Default color variables.
   --input-radio-theme-color: var(--color-black-70);
