--- a/src/scss/paragraphs/_common.scss
+++ b/src/scss/paragraphs/_common.scss
@@ -47,6 +47,31 @@
   }
 }
 
+// Table drag handle resizing
+.js .field--widget-paragraphs .draggable .tabledrag-handle {
+  min-width: 20px;
+}
+
+.paragraphs-tabs-wrapper .field-multiple-table .draggable {
+  td {
+    padding: 0;
+  }
+
+  .tabledrag-handle::after {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+// Give more space to the form on smaller resolutions
+.toolbar-tray-open:not(.toolbar-vertical) .page-wrapper .layout-container,
+body:not(.toolbar-tray-open) .page-wrapper .layout-container {
+  @media (min-width: 976px) {
+    margin-left: m#{i}n(5vw, 24px);
+    margin-right: m#{i}n(5vw, 24px);
+  }
+}
+
 // Hide Paragraph badge.
 .paragraphs-badge {
   display: none;
