--- a/src/scss/paragraphs/_hero.scss
+++ b/src/scss/paragraphs/_hero.scss
@@ -4,6 +4,101 @@
 //
 
 // Hero-block style overrides
-.node-form .field--name-field-hero thead .field-label {
-  display: none;
+.node-form .field--name-field-hero {
+  thead .field-label {
+    display: none;
+  }
+
+  .paragraph-type--hero .form-wrapper .paragraphs-subform {
+    @media (min-width: 1180px) {
+      column-gap: 40px;
+      display: grid;
+      grid-template-columns: auto auto;
+      grid-template-rows: auto auto auto auto auto;
+      margin: 0;
+    }
+
+    .field--name-field-hero-design {
+      @media (min-width: 1180px) {
+        grid-column-end: 2;
+        grid-column-start: 1;
+        grid-row-end: 2;
+        grid-row-start: 1;
+      }
+    }
+
+    .field--name-field-hero-bg-color {
+      @media (min-width: 1180px) {
+        grid-column-end: 2;
+        grid-column-start: 1;
+        grid-row-end: 3;
+        grid-row-start: 2;
+      }
+    }
+
+    .field--name-field-hero-title {
+      @media (min-width: 1180px) {
+        grid-column-end: 2;
+        grid-column-start: 1;
+        grid-row-end: 4;
+        grid-row-start: 3;
+      }
+    }
+
+    .field--name-field-hero-desc {
+      @media (min-width: 1180px) {
+        grid-column-end: 2;
+        grid-column-start: 1;
+        grid-row-end: 5;
+        grid-row-start: 4;
+      }
+    }
+
+    .field--name-field-hero-image {
+      @media (min-width: 1180px) {
+        box-sizing: border-box;
+        grid-column-end: 3;
+        grid-column-start: 2;
+        grid-row-end: 5;
+        grid-row-start: 1;
+        padding-right: 30px;
+      }
+
+      fieldset {
+          background: transparent;
+          border: 0;
+          box-shadow: none;
+          margin: 0;
+          padding: 0 0 1.5rem;
+
+
+        legend {
+            display: none;
+        }
+
+        .fieldset__wrapper {
+            margin: 0;
+        }
+      }
+
+      .media-library-widget-modal .media-library-item--grid,
+      .media-library-selection .media-library-item--grid {
+        @media (min-width: 1180px) {
+          width: 250px;
+        }
+      }
+    }
+
+    .field--name-field-hero-cta {
+      grid-column-end: 2;
+      grid-column-start: 1;
+      grid-row-end: 6;
+      grid-row-start: 5;
+
+      .paragraphs-subform {
+        display: block;
+      }
+    }
+  }
 }
+
