--- a/src/scss/paragraphs/_common.scss
+++ b/src/scss/paragraphs/_common.scss
@@ -98,7 +98,7 @@ body:not(.toolbar-tray-open) .page-wrapper .layout-container {
 
 // Hide "(all languages)" from all paragraph fields.
 // There's no alter hook or preprocess which can be used to easily remove
-// the "addTranslatabilityClue" from paragraph fields.
+// the "addTranslatabilityClue" from async paragraph fields.
 .field--widget-paragraphs .translation-entity-all-languages {
   display: none;
 }
