Themed select2_icon widget.

--- a/modules/select2_icon/templates/select2-icon.html.twig
+++ b/modules/select2_icon/templates/select2-icon.html.twig
@@ -14,7 +14,7 @@
 #}
 
 {% apply spaceless %}
-  <select{{ attributes }}>
+  <select{{ attributes.addClass('select2-icon') }}>
     {% for option in options %}
       {% if option.type == 'optgroup' %}
         <optgroup label="{{ option.label }}">
