--- a/src/scss/paragraphs/_hero.scss
+++ b/src/scss/paragraphs/_hero.scss
@@ -138,3 +138,14 @@
   }
 }
 
+// Diff styles
+.paragraph--type--hero {
+  .field--name-field-hero-title {
+    @include font-size(32px, 48px);
+  }
+
+  .field--name-field-hero-design {
+    margin-top: $spacing-half;
+  }
+}
+
