--- a/modules/select2_icon/templates/select2-icon.html.twig
+++ b/modules/select2_icon/templates/select2-icon.html.twig
@@ -1,31 +1,6 @@
-{#
-/**
- * @file
- * Default theme implementation for a select element.
- *
- * Available variables:
- * - attributes: HTML attributes for the <select> tag.
- * - options: The <option> element children.
- *
- * @see template_preprocess_select()
- *
- * @ingroup themeable
- */
-#}
-
-{% apply spaceless %}
-  <select{{ attributes.addClass('select2-icon') }}>
-    {% for option in options %}
-      {% if option.type == 'optgroup' %}
-        <optgroup label="{{ option.label }}">
-          {% for sub_option in option.options %}
-            <option value="{{ sub_option.value }}"{{ sub_option.selected ? ' selected="selected"' }}>{{ sub_option.label }}</option>
-          {% endfor %}
-        </optgroup>
-      {% elseif option.type == 'option' %}
-        <option data-select2-icon="{{ option.value }}" value="{{ option.value }}"{{ option.selected ? ' selected="selected"' }}>{{ option.label }}</option>
-      {% endif %}
-    {% endfor %}
-  </select>
-{% endapply %}
-
+{% if sprite_url %}
+  <svg {% if icon_label %} aria-labelledby="{{ icon_id }}" {% endif %} class="icon">
+    {% if icon_label %} <title id="{{ icon_id }}">{{ icon_label }}</title>{% endif %}
+    <use xlink:href="{{ sprite_url|trim }}#{{ icon_id }}"/>
+  </svg>
+{% endif %}
