--- a/src/scss/misc/_diff.scss
+++ b/src/scss/misc/_diff.scss
@@ -16,22 +16,34 @@
   }
 }
 
-.diffimg {
-  display: inline-block;
-  line-height: 0;
-  padding: 10px;
-}
+.field--type-image {
+  .diffdel,
+  .diffins,
+  .diffimg {
+    display: inline-block;
+    line-height: 0;
+    padding: 10px;
+  }
 
-del.diffdel,
-del.diffimg {
-  img {
-    filter: grayscale(1);
-    opacity: .5;
+  .diffdel,
+  del.diffimg {
+    img {
+      filter: grayscale(1);
+      opacity: .5;
+    }
   }
 }
 
 // Title of the node that is being diffed.
 .diff-responsive-table-wrapper {
+  h2, h3, h4 {
+    font-weight: 400;
+  }
+
+  h5, h6 {
+    font-weight: 500;
+  }
+
   > h2 {
     @include font-size(34px, 50px);
   }
