UHF-920: Made the sidebar slightly bigger on full hd screens.

--- a/src/scss/navigation/_sidebar.scss
+++ b/src/scss/navigation/_sidebar.scss
@@ -1,3 +1,9 @@
-@media (min-width: 1280px) {
-  --ginSidebarWidth: 400px;
+.layout-region-node-secondary {
+  @media (min-width: 1720px) {
+    --ginSidebarWidth: 400px;
+  }
+
+  @media (min-width: 1900px) {
+    --ginSidebarWidth: 500px;
+  }
 }
