--- a/src/scss/misc/_design-selection.scss
+++ b/src/scss/misc/_design-selection.scss
@@ -1,25 +1,29 @@
-.design-selection + .select2-container,
-.design-selection + .select2-container .select2-selection {
-  min-height: 50px;
-}
+.design-selection {
+  &.select2-container,
+  &.select2-container .select2-selection {
+    min-height: 50px;
+  }
 
-.design-selection + .select2-container .select2-selection .select2-selection__rendered {
-  padding: 12px 16px;
-}
+  .select2-selection .select2-selection__rendered {
+    padding: 12px 16px;
+  }
 
-.design-selection + .select2-container .select2-selection__placeholder,
-.design-selection + .select2-container .select2-selection__arrow,
-.design-selection + .select2-container .select2-selection__clear {
-  padding: 7px;
-}
+  .select2-selection__placeholder,
+  .select2-selection__arrow,
+  .select2-selection__clear {
+    padding: 7px;
+  }
 
-.design-selection + .select2-container .select2-selection--single .select2-selection__arrow {
-  height: 35px;
-  right: 5px;
-  top: 0;
-}
+  .select2-results > .select2-results__options {
+    max-height: 350px;
+  }
 
-.design-selection + .select2-container {
+  .select2-selection--single .select2-selection__arrow {
+    height: 35px;
+    right: 5px;
+    top: 0;
+  }
+
   .image {
     margin-right: 16px;
     transition: transform .2s ease-in-out;
@@ -34,14 +38,15 @@
   align-items: center;
   display: flex;
   height: 100%;
+  justify-content: space-between;
   width: 100%;
 }
 
-.design-selection__image {
+.design-selection__thumbnail {
   border: 2px solid #818181;
   border-radius: 6px;
   height: 50px;
-  margin-right: 16px;
+  margin-left: 16px;
   transition: transform 150ms;
   width: 100px;
 
@@ -49,3 +54,14 @@
     transform: scale(1.1);
   }
 }
+
+.design-selection__image-wrapper {
+  background: $color-white;
+  border: 5px solid $color-black-60;
+  border-radius: 5px;
+  max-width: 50vh;
+  padding: $spacing;
+  position: absolute;
+  z-index: 9999;
+}
+
