UHF-1090: UHF-1030: Add show/hide functionality for the parent unit fields, hide text format help texts

--- a/src/scss/node/_node.scss
+++ b/src/scss/node/_node.scss
@@ -42,6 +42,13 @@
       }
     }
   }
+
+  // Hide the text format helper for now. Maybe replace with something like a info-icon later on.
+  .text-full {
+    .filter-wrapper {
+      display: none;
+    }
+  }
 }
 
 // Hide "About text formats" link from text-area fields on node form.
