UHF-1493: Added form alter to apply a clone of node form theme to tpr entity edit forms.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,8 +11,10 @@
 
 @import "layout/**/*";
 @import "navigation/**/*.*";
+@import "entity/**/*.*";
 @import "node/**/*.*";
 @import "taxonomy/**/*.*";
 @import "paragraphs/**/*.*";
 @import "views/**/*.*";
 @import "misc/**/*.*";
+@import "state/**/*.*";
