--- a/src/scss/paragraphs/_common.scss
+++ b/src/scss/paragraphs/_common.scss
@@ -87,6 +87,9 @@ body:not(.toolbar-tray-open) .page-wrapper .layout-container {
 // Hide "(all languages)" from all paragraph fields.
 // There's no alter hook or preprocess which can be used to easily remove
 // the "addTranslatabilityClue" from async paragraph fields.
-.field--widget-paragraphs .translation-entity-all-languages {
-  display: none;
+.translation-entity-all-languages {
+  .node-form &,
+  .field--widget-paragraphs & {
+    display: none;
+  }
 }
