--- a/templates/page/page--admin--content--integrations--tpr-unit.html.twig
+++ b/templates/page/page--admin--content--integrations--tpr-unit.html.twig
@@ -16,8 +16,10 @@
 <div{{ create_attribute({'class': classes} ) }}>
   <header class="region region-sticky">
     <div class="layout-container region-sticky__items">
-      {{ page.header }}
-      {{ page.content[local_actions_block] }}
+      <div class="region-sticky__items__inner">
+        {{ page.header }}
+        {{ page.content[local_actions_block] }}
+      </div>
     </div>
   </header>
 
