--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,8 +13,8 @@
 @import "navigation/**/*.*";
 @import "entity/**/*.*";
 @import "node/**/*.*";
-@import "taxonomy/**/*.*";
 @import "paragraphs/**/*.*";
 @import "views/**/*.*";
+@import "common/**/*.*";
 @import "misc/**/*.*";
 @import "state/**/*.*";
