--- a/src/scss/paragraphs/_common.scss
+++ b/src/scss/paragraphs/_common.scss
@@ -35,6 +35,10 @@
       td.paragraph-bullet::after {
         display: none;
       }
+
+      td + td {
+        width: 100%;
+      }
     }
   }
 }
